fix z-index for side-menu

--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -8,7 +8,7 @@
   padding: 0 1rem;
   position: sticky;
   top: 0;
-  z-index: 100; /* Ensure the navbar is above other elements */
+  z-index: 99; /* Ensure the navbar is above other elements */
   height: 120px;
 }
 
@@ -41,6 +41,7 @@ body {
     padding: 0 1rem;
     position: sticky;
     top:0;
+    z-index: 100;
 }
 
 .shop-name {
@@ -185,4 +186,11 @@ cursor: pointer;
   position: sticky;
   top: 100px; /* Adjust this value to match the height of your navbar */
   z-index: 1; /* Ensure the product page stays below the navbar */
+}
+
+
+.sticky-menu-container {
+  position: sticky;
+  top: 80px;
+  z-index: 100;
 }
